# binder-benchmarking

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.py  dockerfile  environment.yml  pyproject.toml
benchmark/MemoryBenchmarks/: clang_nanobind_Cloop.out  clang_nanobind_pythonloop.out  clang_numpy_loop.out  clang_pybind11_Cloop.out  clang_pybind11_pythonloop.out  donothing.py  gcc_donothing.out  gcc_nanobind_Cloop.out  gcc_nanobind_pythonloop.out  gcc_numpy_loop.out  gcc_pybind11_Cloop.out  gcc_pybind11_pythonloop.out  nanobind_Cloop.py  nanobind_pythonloop.py  numpy_loop.py  pybind11_Cloop.py  pybind11_pythonloop.py
benchmark/exe/: CMakeLists.txt  benchmark.cpp
benchmark/matlab/: .gitignore  step1_generate_library_definition.m  step2_test.m  time_benchmark.m
benchmark/pureClib/: CMakeLists.txt  benchmark_variation.py  rk4_integration.cpp  rk4_integration.hpp  rk4_integration_nanobind.cpp  rk4_integration_pureCpp.cpp  rk4_integration_pybind11.cpp
benchmark/python/: time_benchmark.py
matlab/: .gitignore
matlab/src/: CMakeLists.txt  mennui.cpp  mennui.hpp
python/: CMakeLists.txt  pyennui.cpp  pyennui_pybind11.cpp
results/: .gitignore  generate_csvs.py  output_msvc_250129.txt  output_msvc_250129_terminal.txt  output_rhel_250129.txt  output_rhel_250129_terminal.txt  output_rk4_msvc_250130.txt  output_rk4_rhel_250130.txt  visualize_results.ipynb
scripts/: run_all.bat  run_all.sh  runbenchmarks_clang.sh  runbenchmarks_gcc.sh  runbenchmarks_matlab.bat  runbenchmarks_msvc.bat  runbenchmarks_pureClib_clang.bat  runbenchmarks_pureClib_clang.sh  runbenchmarks_pureClib_gcc.sh  runbenchmarks_pureClib_msvc.bat
src/: CMakeLists.txt  batch_call.hpp
