[build-system]
requires = ["scikit-build-core-conan>=0.4", "scikit-build-core>=0.10"]
build-backend = "scikit_build_core_conan.build"

[project]
name = "bindbench"
version = "0.0.0"
description = "BinderBenchmark : benchmark navigation code"
readme.content-type = "text/markdown"
readme.text = """
ENnUI : exemplar navigator using inertiahttps://stackoverflow.com/jobs/companies?so_medium=stackoverflow&so_source=SiteNavl sensors
![nanobind logo](
https://github.com/wjakob/nanobind/raw/master/docs/images/logo.jpg?raw=True)
"""
authors = [
    { name = "Michael Walker", email = "mrwalke@sandia.gov" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: C++",
    "Programming Language :: C++ :: Eigen",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "http://mrwalke.cee-gitlab.lan/ennui/"


[tool.scikit-build]
build.verbose = true
logging.level = "INFO"
minimum-version = "build-system.requires"
wheel.platlib = false
wheel.packages = []
cmake.define.NB_TEST = false
cmake.define.PYTHON_MODULE = true

[tool.pytest.ini_options]
testpaths = [ "tests_py" ]
